--- a/Brave 1/index.html
+++ b/Brave 1/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     <meta name="description" content="Acheter de jeux de notre grande sélection. Jouer à la demande.">
     <title>Jeux en demande</title>
 </head>
