Finish navbar and paragraph but im not finish yet cart producte

--- a/Brave 2/index.html
+++ b/Brave 2/index.html
@@ -6,9 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
-    <title>Document</title>
+    <title>Magasin De Vidéo</title>
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!---Header--->
+    <header>
+        <!---nav--->
+            <nav>
+                <img class="logo" src="imges/logo/STORE.png" alt="">
+
+                <ul>
+                    <li><a href="">Videos to rent</a></li>
+                    <li><a href="">Videos to buy</a></li>
+                    <li><a href="">Used DVDs</a></li>
+                    <li><a href="">Offers</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!---section--->
+    <section>
+        <ul>
+            <li><a href="">Videos to rent</a><span>/</span></li>
+            <li><a href="">Videos to buy</a><span>/</span></li>
+            <li><a href="">Used DVDs</a></li>
+        </ul>
+
+        <div class="paragraph">
+            <h1>Videos less than 10$</h1>
+            <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum non purus quisvestibulum. Pellentesque ultricies quam lacus, ut tristique sapien tristique et.</p>
+        </div>
+    </section>
+
+
     
 </body>
 </html>
