--- a/Brave 3/index.html
+++ b/Brave 3/index.html
@@ -33,8 +33,10 @@
     <!---section--->
     <section>
         <ul>
-            <li><a href="">Videos to rent</a><span>/</span></li>
-            <li><a href="">Videos to buy</a><span>/</span></li>
+            <li><a href="">Videos to rent</a></li>
+            <li>/</li>
+            <li><a href="">Videos to buy</a></li>
+            <li>/</li>
             <li><a href="">Used DVDs</a></li>
         </ul>
 
