--- a/Brave 3/index.html
+++ b/Brave 3/index.html
@@ -28,17 +28,19 @@
                     <li><a href="">Offers</a></li>
                 </ul>
             </nav>
+
+            <ul style="width: 80%; margin:20px auto;">
+                <li><a href="">Videos to rent</a></li>
+                <li>/</li>
+                <li><a href="">Videos to buy</a></li>
+                <li>/</li>
+                <li><a href="">Used DVDs</a></li>
+            </ul>
     </header>
 
     <!---section--->
     <section>
-        <ul>
-            <li><a href="">Videos to rent</a></li>
-            <li>/</li>
-            <li><a href="">Videos to buy</a></li>
-            <li>/</li>
-            <li><a href="">Used DVDs</a></li>
-        </ul>
+        
 
         <div class="paragraph">
             <h1>Videos less than 10$</h1>
